--- a/src/style.css
+++ b/src/style.css
@@ -131,9 +131,9 @@
   height: 100%;
 }
 
-.background {
+/* .background {
   background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 30%, rgba(255,255,255,0) 100%);
-}
+}*/
 
 .container {
   flex-direction: column;
